--- a/src/components/MarketItem/styles.module.scss
+++ b/src/components/MarketItem/styles.module.scss
@@ -26,10 +26,21 @@
         cursor: pointer;
 
         & .title {
+            width: 100%;
+            height: 1.1rem;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
             font-size: 0.9rem;
         }
 
         & .category {
+            width: 100%;
+            height: 0.8rem;
+            margin: 0.2rem 0 0.4rem;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
             font-size: 0.7rem;
             color: goldenrod;
         }
