--- a/src/components/History/styles.module.scss
+++ b/src/components/History/styles.module.scss
@@ -1,79 +1,113 @@
 @import '../../theme/palette.scss';
 
-.historyComponent {
-    position: absolute;
-    top: 4rem;
-    z-index: 11;
-    & .historyTitle {
-        margin: 25px 50px;
-        font-size: 1.6em;
-        width: 250px;
-    }
-    & .contentTitle {
-        margin: 0 50px;
-        filter: brightness(70%);
-    }
-    & .buttonShareEarn {
-        color: #43a047;
-        margin-top: 50px;
-    }
-    & .historyMain {
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        background: #131416;
-        & .papersMain {
-            font-size: 0.9em;
-            margin: 50px 20px;
+.mainContainer {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 1rem;
+    margin: 1rem;
+    z-index: 12;
 
-            & .historyTableFooter {
-                color: white;
+    & .historyContainer {
+        width: 75%;
 
-                & button {
-                    box-shadow: none;
-                    color: white;
+        & .controlsContainer {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            width: 100%;
+            height: 2.5rem;
+
+            & .tabsContainer {
+                display: flex;
+                flex-wrap: nowrap;
+                justify-content: space-between;
+                width: 30%;
+                height: 100%;
+
+                & .tabs {
                     cursor: pointer;
-                    transform: scale(0.7);
+                    display: inline-block;
+                    height: 100%;
+                    background: $primaryGrey;
+                    color: $lightGrey;
+                    text-align: center;
+                    line-height: 2.5rem;
+                    border: 1px solid $secondaryGrey;
+                    border-radius: 5px 5px 0 0;
+                    border-bottom: none;
+                    filter: brightness(50%);
+                    transition: all 0s;
+                    padding: 0 1rem 0 2rem;
+                }
 
-                    &:hover {
-                        background: $secondaryGreen;
+                & .active {
+                    height: 101%;
+                    z-index: 14;
+                    filter: brightness(100%);
+
+                    &::after {
+                        content: '●';
+                        margin-left: 0.5rem;
                     }
                 }
             }
 
-            & .myAcc {
-                background: #2e2f30;
+            & .searchContainer {
+                display: flex;
+                justify-content: flex-end;
 
-                & .titleHistory {
-                    margin: 0;
-                    font-size: 1.1em;
-                    padding: 10px 5px 10px 25px;
-                    color: #00ee7a;
-                }
-                & .titleMyAcc {
-                    margin: 0;
-                    padding: 5px 25px;
-                    color: #00ee7a;
-                }
-                & .balanceMyAcc {
-                    background: #1e1f21;
-                    display: flex;
-                    flex-direction: row;
-                    padding: 10px 0px 10px 25px;
-                }
-                & .tableHistory {
-                    background: #1e1f21;
-                    & .tableColumn,
-                    & .tableColumnHead {
-                        color: #919191;
-                        border-bottom: 1px solid #000;
-                        padding: 5px 5px 5px 25px;
-                    }
-                    & .tableColumnHead {
-                        color: #b5b5b5;
-                        font-weight: bold;
+                & input {
+                    border-radius: 5px 0 0 5px;
+                    background: $primaryGrey;
+                    color: $secondaryGreen;
+                    padding-left: 1rem;
+                    font-size: 1.2rem;
+                    border: 1px solid grey;
+                    height: 2.2rem;
+                    width: 40%;
+                    border-right: none;
+
+                    &:focus {
+                        width: 90%;
                     }
                 }
+
+                & .searchIcon {
+                    width: 5%;
+                    border-radius: 0 5px 5px 0;
+                    background: $primaryGrey;
+                    color: $secondaryGrey;
+                    border: 1px solid grey;
+                    border-left: none;
+                    height: 2.2rem;
+                    padding-right: 0.5rem;
+                }
+            }
+        }
+
+        & .historyTab {
+            padding-top: 1rem;
+            width: 100%;
+            height: 87vh;
+            background: $primaryGrey;
+            border: 1px solid $secondaryGrey;
+            border-radius: 0 0 5px 5px;
+            display: flex;
+            flex-direction: column;
+            overflow-y: scroll;
+            overflow-x: hidden;
+
+            & .empty {
+                font-size: 2rem;
+                color: $secondaryGreen;
+                width: 100%;
+                height: 2rem;
+                text-align: center;
+                position: relative;
+                top: 45%;
             }
         }
     }
