--- a/src/components/TableRow/styles.module.scss
+++ b/src/components/TableRow/styles.module.scss
@@ -1,32 +1,65 @@
+@import '../../theme/palette.scss';
+
 .tableHeader {
     width: 18%;
-    text-align: center;
+    text-align: left;
     font-weight: bold;
     margin: 0 20px;
-    font-size: 0.8rem;
-    color: #aaa;
-    line-height: 3rem;
+    font-size: 0.9rem;
+    color: $secondaryGreen;
+    line-height: 1rem;
     overflow-y: hidden;
+    cursor: pointer;
+
+    &:hover {
+        &::after {
+            content: '▼';
+            margin-left: 0.5rem;
+        }
+    }
+
+    & .active {
+        &::after {
+            content: '▼';
+            margin-left: 0.5rem;
+        }
+    }
+}
+
+.headerRow {
+    display: flex;
+    width: 100%;
+    height: 2rem;
+    justify-content: space-around;
+    background: #202020;
 }
 
 .tableRow {
     display: flex;
     width: 100%;
-    height: 3.2rem;
+    height: 3rem;
     justify-content: space-around;
     background: #202020;
-    border-bottom: 1px solid black;
 }
 
 .tableCell {
     width: 18%;
     overflow-x: scroll;
-    text-align: center;
+    text-align: left;
     margin: 0 20px;
-    font-size: 0.8rem;
-    color: #808080;
+    font-size: 0.9rem;
+    color: $lightGrey;
     line-height: 3rem;
     overflow-y: hidden;
+    display: flex;
+    align-items: center;
+
+    & img {
+        display: inline-block;
+        width: 0.9rem;
+        height: 0.9rem;
+        margin-right: 0.3rem;
+    }
 
     &::-webkit-scrollbar {
         display: none;
