--- a/src/components/History/styles.module.scss
+++ b/src/components/History/styles.module.scss
@@ -97,8 +97,11 @@
             border-radius: 0 0 5px 5px;
             display: flex;
             flex-direction: column;
-            overflow-y: scroll;
             overflow-x: hidden;
+
+            & .historyData {
+                overflow-y: scroll;
+            }
 
             & .empty {
                 font-size: 2rem;
