--- a/src/components/TableRow/styles.module.scss
+++ b/src/components/TableRow/styles.module.scss
@@ -29,7 +29,7 @@
 .headerRow {
     display: flex;
     width: 100%;
-    height: 2rem;
+    min-height: 2rem;
     justify-content: space-around;
     background: #202020;
 }
@@ -37,7 +37,7 @@
 .tableRow {
     display: flex;
     width: 100%;
-    height: 3rem;
+    min-height: 3rem;
     justify-content: space-around;
     background: #202020;
 }
