--- a/src/components/Leaderboard/styles.module.scss
+++ b/src/components/Leaderboard/styles.module.scss
@@ -1,60 +1,117 @@
 @import '../../theme/palette.scss';
 
-.container {
-    position: absolute;
-    top: 0;
-    z-index: 11;
+.mainContainer {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 1rem;
+    margin: 1rem;
+    z-index: 12;
 
-    h4 {
-        margin: 10px 50px 40px;
-        font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-        font-weight: 500;
-        color: #bbb;
-    }
+    & .leaderboardContainer {
+        width: 75%;
 
-    .leaderboardHeaderText {
-        width: 25%;
-        margin: 20px 50px 10px;
-        font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-        font-weight: 500;
-        font-size: 1.4rem;
-        text-transform: uppercase;
-    }
+        & .controlsContainer {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
 
-    .leaderboardTitle {
-        height: 3rem;
-        line-height: 3rem;
-        font-size: 1.3rem;
-        color: #00ee7a;
-        background: #1e1f21;
-        border-radius: 3px;
-        padding-left: 5%;
-    }
+            width: 100%;
+            height: 2.5rem;
 
-    .tableData {
-        overflow-y: scroll;
-        height: 16rem;
+            & .tabsContainer {
+                display: flex;
+                flex-wrap: nowrap;
+                justify-content: space-between;
+                width: 30%;
+                height: 100%;
 
-        &::-webkit-scrollbar-thumb {
-            background-color: #013d20;
+                & .tabs {
+                    cursor: pointer;
+                    display: inline-block;
+                    height: 100%;
+                    background: $primaryGrey;
+                    color: $lightGrey;
+                    text-align: center;
+                    line-height: 2.5rem;
+                    border: 1px solid $secondaryGrey;
+                    border-radius: 5px 5px 0 0;
+                    border-bottom: none;
+                    filter: brightness(50%);
+                    transition: all 0s;
+                    padding: 0 1rem 0 2rem;
+                }
+
+                & .active {
+                    height: 101%;
+                    z-index: 14;
+                    filter: brightness(100%);
+
+                    &::after {
+                        content: '●';
+                        margin-left: 0.5rem;
+                    }
+                }
+            }
+
+            & .searchContainer {
+                display: flex;
+                justify-content: flex-end;
+
+                & input {
+                    border-radius: 5px 0 0 5px;
+                    background: $primaryGrey;
+                    color: $secondaryGreen;
+                    padding-left: 1rem;
+                    font-size: 1.2rem;
+                    border: 1px solid grey;
+                    height: 2.2rem;
+                    width: 40%;
+                    border-right: none;
+
+                    &:focus {
+                        width: 90%;
+                    }
+                }
+
+                & .searchIcon {
+                    width: 5%;
+                    border-radius: 0 5px 5px 0;
+                    background: $primaryGrey;
+                    color: $secondaryGrey;
+                    border: 1px solid grey;
+                    border-left: none;
+                    height: 2.2rem;
+                    padding-right: 0.5rem;
+                }
+            }
         }
-    }
 
-    .leaderboardContainer {
-        position: fixed;
-        bottom: 0;
-        display: flex;
-        justify-content: space-around;
-        height: 30rem;
-        width: 100%;
-        padding: 40px 0;
-        background: rgba(0, 0, 0, 0.699);
-        margin-left: -2rem;
+        & .leaderboardTab {
+            padding-top: 1rem;
+            width: 100%;
+            height: 87vh;
+            background: $primaryGrey;
+            border: 1px solid $secondaryGrey;
+            border-radius: 0 0 5px 5px;
+            display: flex;
+            flex-direction: column;
+            overflow-x: hidden;
 
-        & .leaderboardTable {
-            display: inline-block;
-            height: 100%;
-            width: 60%;
+            & .leaderboardData {
+                overflow-y: scroll;
+            }
+
+            & .empty {
+                font-size: 2rem;
+                color: $secondaryGreen;
+                width: 100%;
+                height: 2rem;
+                text-align: center;
+                position: relative;
+                top: 45%;
+            }
         }
     }
 }
