--- a/src/components/MarketItem/styles.module.scss
+++ b/src/components/MarketItem/styles.module.scss
@@ -9,6 +9,8 @@
 
     height: 45%;
     width: 23%;
+    min-width: 201px;
+    min-height: 250px;
     margin: 0.8rem 1%;
     background: $paletteColor2_2;
     border-radius: 10px;
@@ -50,6 +52,7 @@
         cursor: pointer;
         width: 100%;
         height: 50%;
+        min-height: 125px;
     }
 
     & .label {
@@ -66,7 +69,7 @@
 
     & .priceContainer {
         width: 100%;
-        height: 3rem;
+        min-height: 3rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -85,6 +88,7 @@
         & img {
             width: 25%;
             filter: invert(1);
+            min-height: 0;
         }
     }
 
