--- a/src/components/DashboardFavorite/styles.module.scss
+++ b/src/components/DashboardFavorite/styles.module.scss
@@ -16,7 +16,7 @@
 }
 
 .dots {
-    margin: 0 auto 1rem;
+    margin: 1rem auto;
     width: 20%;
     display: flex;
     flex-direction: row;
@@ -33,7 +33,7 @@
 
 .button {
     width: 7rem;
-    margin: 1rem auto;
+    margin: 2rem auto 0;
     font-size: 1rem;
     line-height: 2rem;
     text-align: center;
