--- a/src/components/MarketRecomendations/styles.module.scss
+++ b/src/components/MarketRecomendations/styles.module.scss
@@ -31,7 +31,7 @@
 
 .button {
     width: 7rem;
-    margin: 1rem auto;
+    margin: 2rem auto 0;
     font-size: 1rem;
     line-height: 2rem;
     text-align: center;
