--- a/src/components/RecentActivity/styles.module.scss
+++ b/src/components/RecentActivity/styles.module.scss
@@ -11,12 +11,12 @@
 
 .activitiesContainer {
     overflow-y: scroll;
-    max-height: 150px;
+    max-height: 200px;
 }
 
 .button {
     width: 7rem;
-    margin: 1rem auto;
+    margin: 2rem auto 0;
     font-size: 1rem;
     line-height: 2rem;
     text-align: center;
