--- a/src/components/UserItem/styles.module.scss
+++ b/src/components/UserItem/styles.module.scss
@@ -7,91 +7,102 @@
     flex-wrap: nowrap;
     justify-content: space-between;
 
-    height: 45%;
-    width: 23%;
+    height: 49%;
+    width: 28%;
+    min-width: 201px;
+    min-height: 250px;
     margin: 0.8rem 1%;
-    background: $paletteColor2_2;
-    border-radius: 10px;
+
+    border-radius: 5px;
     border: 1px solid $lightGrey;
+
     animation: appear 300ms;
-    padding-bottom: 0.6rem;
-
-    //? hack to get rid of border bug in chromium
-    transform: scale(1.01);
-
-    & .titleContainer {
-        width: 100%;
-        padding: 0.5rem 1rem;
-        margin-bottom: -0.5rem;
-        cursor: pointer;
-
-        & .title {
-            width: 100%;
-            height: 1.1rem;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
-            font-size: 0.9rem;
-        }
-
-        & .category {
-            width: 100%;
-            height: 0.8rem;
-            margin: 0.2rem 0 0.4rem;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
-            font-size: 0.7rem;
-            color: goldenrod;
-        }
-    }
-
-    & img {
-        cursor: pointer;
-        width: 100%;
-        height: 50%;
-    }
 
     & .priceContainer {
-        width: 100%;
-        height: 3rem;
         display: flex;
-        flex-direction: row-reverse;
         justify-content: space-between;
         align-items: center;
+        padding: 0.5rem 5%;
 
-        & img {
+        height: 15%;
+        background: $secondaryGrey;
+        border-radius: 5px 5px 0 0;
+
+        & .gameLogo {
             width: 25%;
-            margin: 0 0.5rem;
             filter: invert(1);
+            min-height: 0;
         }
 
-        & button {
-            width: 70%;
-            margin: 0 0.5rem 0 0;
-            background: $secondaryGreen;
-            border: none;
-            border-radius: 5px;
-            color: #fff;
-            height: 2rem;
-            cursor: pointer;
+        & p {
+            font-size: 1.3rem;
 
-            &:hover {
-                background: $primaryGreen;
-                color: #000;
+            &::before {
+                content: '₿';
+                color: $primaryGreen;
+                filter: brightness(85%);
             }
         }
+    }
 
-        & .notTradable {
-            width: 70%;
-            margin: 0 0.5rem 0 0;
-            background: $secondaryGrey;
-            border: none;
-            border-radius: 5px;
-            color: $lightGrey;
-            text-align: center;
-            line-height: 2rem;
-            height: 2rem;
+    & .infoContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        background-size: cover;
+        background-position: center;
+        height: 85%;
+        border-radius: 0 0 5px 5px;
+
+        & .label {
+            background: $secondaryGreen;
+            clip-path: polygon(100% 0, 65% 0, 100% 100%);
+            width: 100%;
+            height: 35%;
+            text-align: right;
+            padding: 0.5rem;
+        }
+
+        & .info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
+
+            height: 40%;
+            padding: 0.5rem 0;
+            background-image: linear-gradient(transparent, black 80%);
+            border-radius: 0 0 5px 5px;
+
+            & p {
+                text-align: center;
+
+                &:last-of-type {
+                    width: 60%;
+                    height: 1rem;
+                    margin: 0.2rem 0 0.4rem;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    font-size: 0.8rem;
+                }
+            }
+
+            & button {
+                cursor: pointer;
+                width: 45%;
+                border: 1px solid #fff;
+                background: transparent;
+                color: #fff;
+                height: 1.8rem;
+                border-radius: 5px;
+
+                &:hover {
+                    border: 1px solid $secondaryGreen;
+                    background: $secondaryGreen;
+                }
+            }
         }
     }
 }
