--- a/src/components/MarketRecomendations/styles.module.scss
+++ b/src/components/MarketRecomendations/styles.module.scss
@@ -18,7 +18,7 @@
     overflow-x: hidden;
     overflow-y: scroll;
 
-    & p {
+    & .noRecomendations {
         font-size: 2rem;
         color: $secondaryGreen;
         width: 100%;
