--- a/src/components/_popups/market/Confirmation/styles.module.scss
+++ b/src/components/_popups/market/Confirmation/styles.module.scss
@@ -18,7 +18,7 @@
         height: 20%;
         width: 25%;
         background: $primaryGrey;
-        border: 2px solid $secondaryGreen;
+        border: 1px solid $secondaryGreen;
         border-radius: 5px;
 
         //? box shadow
@@ -26,7 +26,9 @@
         animation: appear 800ms;
 
         & p {
+            text-align: center;
             margin: 0.5rem 1rem 0;
+            font-size: 0.9rem;
         }
 
         & .buttonContainer {
@@ -37,9 +39,9 @@
             margin: 0.5rem auto;
 
             & div {
-                height: 2.5rem;
-                line-height: 2.5rem;
-                font-size: 1rem;
+                height: 2rem;
+                line-height: 2rem;
+                font-size: 0.8rem;
                 border-radius: 5px;
                 text-align: center;
                 cursor: pointer;
@@ -57,10 +59,12 @@
 
             & .buyButton {
                 width: 60%;
-                background: $secondaryGreen;
+                background: transparent;
+                border: 1px solid #fff;
 
                 &:hover {
-                    background: $primaryGreen;
+                    background: $secondaryGreen;
+                    border: 1px solid $secondaryGreen;
                 }
             }
         }
