--- a/src/components/MarketItem/styles.module.scss
+++ b/src/components/MarketItem/styles.module.scss
@@ -80,9 +80,9 @@
             align-items: center;
             justify-content: space-evenly;
 
-            height: 40%;
-            padding: 0.5rem 0;
-            background-image: linear-gradient(transparent, black 80%);
+            height: 50%;
+            padding: 2rem 0 0.5rem;
+            background-image: linear-gradient(transparent, black 40%);
             border-radius: 0 0 5px 5px;
 
             & .itemName {
