--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -165,7 +165,7 @@
         width: 8rem;
         height: 2rem;
         margin: 0 1.5rem;
-        background-image: url('../../theme/assets/_Links/Logo.png');
+        background-image: url('../../theme/assets/Logo_nav.png');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -326,7 +326,7 @@
         width: 1.5rem;
         height: 1.5rem;
         margin: 0 auto;
-        background-image: url('../../theme/assets/_Links/logo-short.svg');
+        background-image: url('../../theme/assets/logo_short.svg');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
