forgot password template

--- a/src/components/Startup/styles.module.scss
+++ b/src/components/Startup/styles.module.scss
@@ -33,3 +33,18 @@
 
     overflow-y: hidden;
 }
+
+.containerForgotPassword {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    height: 30%;
+    width: 50%;
+    transform: translate(-50%, -50%);
+
+    background: rgba(0, 0, 0, 0.7);
+    border: 1px solid $secondaryGreen;
+    border-radius: 3px;
+
+    overflow-y: hidden;
+}
