--- a/src/components/MarketRecomendations/styles.module.scss
+++ b/src/components/MarketRecomendations/styles.module.scss
@@ -14,9 +14,10 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     max-height: 280px;
-    margin: 0.5rem 0;
+    margin: 0;
     overflow-x: hidden;
     overflow-y: scroll;
+    padding-bottom: 1rem;
 
     & .noRecomendations {
         font-size: 2rem;
