--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -198,6 +198,11 @@
         &:hover {
             filter: brightness(100%);
         }
+
+        & .discordLogo {
+            width: 1.7rem;
+            margin: 0.5rem 2rem 0.5rem 0;
+        }
     }
 }
 
@@ -366,6 +371,18 @@
 
         &:hover {
             filter: brightness(100%);
+        }
+
+        & a {
+            width: 100%;
+
+            & .discordLogo {
+                width: 2rem;
+                position: relative;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
         }
     }
 }
