--- a/src/components/MarketRecomendations/styles.module.scss
+++ b/src/components/MarketRecomendations/styles.module.scss
@@ -20,7 +20,8 @@
     padding-bottom: 1rem;
 
     & .noRecomendations {
-        font-size: 2rem;
+        font-size: 1.5rem;
+        margin: 1rem;
         color: $secondaryGreen;
         width: 100%;
         height: 2rem;
