--- a/src/components/Login/styles.module.scss
+++ b/src/components/Login/styles.module.scss
@@ -104,3 +104,22 @@
         color: #000;
     }
 }
+
+.tryDemoButton {
+    position: absolute;
+    left: 50%;
+    top: 90%;
+    padding: 0.5rem;
+    transform: translate(-50%, -50%);
+    border-radius: 3px;
+    width: 70%;
+    background: transparent;
+    border: 1px solid $secondaryGreen;
+    cursor: pointer;
+    color: $secondaryGreen;
+
+    &:hover {
+        background: $secondaryGreen;
+        color: #000;
+    }
+}
