--- a/src/components/Market/styles.module.scss
+++ b/src/components/Market/styles.module.scss
@@ -97,7 +97,8 @@
             overflow-x: hidden;
 
             & .empty {
-                font-size: 2rem;
+                font-size: 1.5rem;
+                margin: 1rem;
                 color: $secondaryGreen;
                 width: 100%;
                 height: 2rem;
