basic bonus popup

--- a/src/components/Startup/styles.module.scss
+++ b/src/components/Startup/styles.module.scss
@@ -34,7 +34,7 @@
     overflow-y: hidden;
 }
 
-.containerForgotPassword {
+.containerPasswordRecovery {
     position: absolute;
     left: 50%;
     top: 50%;
