--- a/src/components/_popups/market/Error/styles.module.scss
+++ b/src/components/_popups/market/Error/styles.module.scss
@@ -18,19 +18,20 @@
         min-height: 20%;
         width: 25%;
         background: $primaryGrey;
-        border: 2px solid #c40c0c;
+        border: 1px solid #c40c0c;
         border-radius: 5px;
-        box-shadow: 0px 0px 100px 0px #c40c0c;
+        box-shadow: 0px 0px 50px 0px #c40c0c;
 
         animation: appear 800ms;
 
         & p {
+            width: 100%;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             text-align: center;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             color: #c40c0c;
         }
     }
