--- a/src/components/_popups/market/Success/styles.module.scss
+++ b/src/components/_popups/market/Success/styles.module.scss
@@ -18,17 +18,18 @@
         height: 20%;
         width: 25%;
         background: $primaryGrey;
-        border: 2px solid $secondaryGreen;
+        border: 1px solid $secondaryGreen;
         border-radius: 5px;
-        box-shadow: 0px 0px 100px 0px $secondaryGreen;
+        box-shadow: 0px 0px 50px 0px $secondaryGreen;
 
         animation: appear 800ms;
 
         & p {
             position: relative;
-            top: 25%;
+            top: 50%;
+            transform: translate(0, -50%);
             text-align: center;
-            font-size: 2rem;
+            font-size: 1.5rem;
             color: $secondaryGreen;
         }
     }
