--- a/src/components/_popups/passwordReset/Hint/styles.module.scss
+++ b/src/components/_popups/passwordReset/Hint/styles.module.scss
@@ -29,8 +29,10 @@
         justify-content: space-evenly;
 
         & p {
+            margin: 0 auto;
+            width: 80%;
             text-align: center;
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             color: $secondaryGreen;
         }
 
