--- a/src/components/Login/styles.module.scss
+++ b/src/components/Login/styles.module.scss
@@ -8,11 +8,10 @@
 }
 
 .discordLink {
+    cursor: pointer;
     display: inline;
-    & img {
-        width: 3rem;
-        margin: -1rem 0 0 0.2rem;
-    }
+    width: 3rem;
+    margin: -1rem -1rem 0 0.2rem;
 }
 
 .loginForm {
@@ -49,7 +48,7 @@
             cursor: pointer;
             transition: all 0.3s;
             font-size: 1rem;
-            width: 82%;
+            width: 85%;
 
             &:hover {
                 background: $primaryGreen;
