--- a/src/components/Login/styles.module.scss
+++ b/src/components/Login/styles.module.scss
@@ -7,11 +7,11 @@
     transform: translate(-50%, -50%) scale(0.15);
 }
 
-.discordLink {
+.authLinks {
     cursor: pointer;
     display: inline;
-    width: 3rem;
-    margin: -1rem -1rem 0 0.2rem;
+    width: 2rem;
+    margin: -1rem 0 0.4rem 0.7rem;
 }
 
 .loginForm {
@@ -48,7 +48,7 @@
             cursor: pointer;
             transition: all 0.3s;
             font-size: 1rem;
-            width: 85%;
+            width: 70%;
 
             &:hover {
                 background: $primaryGreen;
